# Rahma-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
admin-front/: README.md  index.html  package-lock.json  package.json  vite.config.js
admin-front/src/: App.jsx  main.jsx  styles.css
alembic/: README  env.py
alembic/versions/: 10103aa9d6fb_init.py  103f1ecaf3e3_add_table_refresh_table.py  31aa9bd277cd_init.py  4bdb82f48fac_init.py  4e2ebfd078f7_init2.py  6f0217677bc7_init.py  922457440bf7_init.py  a0dc44c37920_init.py  a8f8af8a8244_init.py  c1a7a693fdeb_fix_base_table.py  d68ce5496334_add_password_reset_code.py
app/: main.py
app/admin/: admin.py  auth.py  utils.py
app/admin/views/: __init__.py  amal_views.py  auth_views.py  country_views.py  location_views.py  misc_views.py  route_views.py  user_views.py
app/admin_front/: __init__.py  api.py  auth.py  deps.py  panel.py  registry.py  schemas.py
app/api/middlewares/: correlation_id.py  request_logging.py
app/api/v1/: exceptions.py
app/core/: config.py  error.py  middleware.py  router.py
app/db/: engine.py
app/db/cruds/: amal_category_repository.py  amal_completion_repository.py  amal_repository.py  assadik_repository.py  country_repository.py  email_verifications.py  (+8 more)
app/docs/: elements.py  openapi.py  responses.py  scalar.py
app/schemas/: error.py
app/seeds/: factories.py  seed_db.py
app/utils/: crypto.py  emailer.py  s3.py  structlog_config.py  time.py  types.py
(+97 files in other folders)
